# stripetestproject

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
config/: settings.py  urls.py
stripe_api/: admin.py  apps.py  models.py  urls.py  views.py
stripe_api/migrations/: 0001_initial.py  0002_alter_item_price.py  0003_order_orderitem_order_items.py  0004_discount_tax_order_discount_order_tax.py
stripe_api/templates/stripe_api/: item.html  order.html
stripe_api/utils/: stripe_session.py
